<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Montreal"
                android:textColor="#000000"
                android:textSize="30sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/situation_in_numbers"
                android:textColor="#000000"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_city_totalCases"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="35sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cases"
                    android:textSize="35sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_city_deaths"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#f47100"
                    android:textSize="35sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textSize="35sp"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="Cases in Montreal by borough, linked city and CIUSSS"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="20sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CIUSSS du Centre-Ouest-de-l'Île-de-Montréal"
                    android:textSize="25sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CIUSSS du Centre-Sud-de-l'Île-de-Montréal"
                    android:textSize="25sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CIUSSS de l'Est-de-l'Île-de-Montréal"
                    android:textSize="25sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CIUSSS du Nord-de-l'Île-de-Montréal"
                    android:textSize="25sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CIUSSS de l'Ouest-de-l'Île-de-Montréal"
                    android:textSize="25sp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_area6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:textAlignment="textEnd"
                    android:textColor="#F44336"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Territory to be confirmed"
                    android:textSize="25sp"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_overallStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="Over all statistics ^"
                android:textStyle="italic"
                android:textAlignment="textStart"
                android:textColor="#0000EE"
                android:textSize="20sp"></TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>